[gd_scene load_steps=25 format=2]

[ext_resource path="res://Scenes/GameThings/BaseLevel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/GameThings/Goal.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/GameThings/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Objects/Sem Fundo.png" type="Texture" id=4]
[ext_resource path="res://Assets/Objects/Qtd haiiro.png" type="Texture" id=5]
[ext_resource path="res://Assets/Objects/Classic.png" type="Texture" id=6]
[ext_resource path="res://Scripts/GameLevels/Level_10.gd" type="Script" id=7]
[ext_resource path="res://Assets/Blocks/Sheet.png" type="Texture" id=8]
[ext_resource path="res://Assets/Blocks/Bandeira.png" type="Texture" id=9]
[ext_resource path="res://Assets/Blocks/Ghostin = Vc.tscn" type="PackedScene" id=10]
[ext_resource path="res://Assets/Blocks/Haiiro = vc.tscn" type="PackedScene" id=11]
[ext_resource path="res://Assets/Blocks/Caveira = Derrota.tscn" type="PackedScene" id=12]
[ext_resource path="res://Assets/Blocks/Cerca = Pare.tscn" type="PackedScene" id=13]
[ext_resource path="res://Assets/Blocks/IFs/IF LV 10.png" type="Texture" id=14]
[ext_resource path="res://Scripts/GameBasics/Help.gd" type="Script" id=15]
[ext_resource path="res://Assets/Creatures-no-bg.png" type="Texture" id=16]
[ext_resource path="res://Styles/Fonts/GameFont.tres" type="DynamicFont" id=17]
[ext_resource path="res://Assets/Objects/Modern.png" type="Texture" id=18]
[ext_resource path="res://Assets/box.png" type="Texture" id=19]
[ext_resource path="res://Styles/Fonts/Help Font.tres" type="DynamicFont" id=20]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.5, 6.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 253.75, 60 )

[node name="Level_10" type="Node2D"]
script = ExtResource( 7 )

[node name="BaseLevel" parent="." instance=ExtResource( 1 )]

[node name="Player" parent="." groups=["haiiro"] instance=ExtResource( 3 )]
position = Vector2( 240, 64 )

[node name="Player2" parent="." instance=ExtResource( 3 )]
modulate = Color( 0.541176, 0.541176, 0.921569, 1 )
position = Vector2( 32, 64 )

[node name="Goal" parent="." instance=ExtResource( 2 )]
position = Vector2( 232, 112 )
nextLevelPath = "res://Scenes/GameLevels/Level_11.tscn"

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 112, 32 )

[node name="Area2D" type="Area2D" parent="Node2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Area2D"]
position = Vector2( -89.5, 7.5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Node2D/Area2D"]
position = Vector2( -97.5, 0.500002 )
scale = Vector2( 1.23077, 1.23077 )
texture = ExtResource( 4 )
centered = false
hframes = 20
vframes = 10
frame = 197

[node name="Decoration" type="Node" parent="."]

[node name="Sprite" type="Sprite" parent="Decoration"]
position = Vector2( 38.5, 48.5 )
texture = ExtResource( 6 )
flip_h = true
hframes = 20
vframes = 20
frame = 378

[node name="Sprite2" type="Sprite" parent="Decoration"]
position = Vector2( 6.5, 48.5 )
texture = ExtResource( 6 )
flip_h = true
hframes = 20
vframes = 20
frame = 378

[node name="Sprite3" type="Sprite" parent="Decoration"]
position = Vector2( 248, 8 )
texture = ExtResource( 6 )
flip_h = true
hframes = 20
vframes = 20
frame = 370

[node name="Sprite5" type="Sprite" parent="Decoration"]
position = Vector2( 136, 8 )
texture = ExtResource( 6 )
flip_h = true
hframes = 20
vframes = 20
frame = 315

[node name="Sprite7" type="Sprite" parent="Decoration"]
position = Vector2( 152, 8 )
texture = ExtResource( 6 )
flip_h = true
hframes = 20
vframes = 20
frame = 315

[node name="Sprite8" type="Sprite" parent="Decoration"]
position = Vector2( 168, 8 )
texture = ExtResource( 6 )
flip_h = true
hframes = 20
vframes = 20
frame = 315

[node name="Sprite9" type="Sprite" parent="Decoration"]
position = Vector2( 184, 8 )
texture = ExtResource( 6 )
flip_h = true
hframes = 20
vframes = 20
frame = 315

[node name="Sprite10" type="Sprite" parent="Decoration"]
position = Vector2( 152, 16 )
texture = ExtResource( 6 )
flip_h = true
hframes = 20
vframes = 20
frame = 315

[node name="Sprite11" type="Sprite" parent="Decoration"]
position = Vector2( 168, 16 )
texture = ExtResource( 6 )
flip_h = true
hframes = 20
vframes = 20
frame = 315

[node name="Sprite12" type="Sprite" parent="Decoration"]
position = Vector2( 56, 48 )
texture = ExtResource( 6 )
flip_h = true
hframes = 20
vframes = 20
frame = 176

[node name="Sprite15" type="Sprite" parent="Decoration"]
position = Vector2( 240, 8 )
texture = ExtResource( 6 )
flip_h = true
hframes = 20
vframes = 20
frame = 172

[node name="Sprite6" type="Sprite" parent="Decoration"]
position = Vector2( 42, 113 )
texture = ExtResource( 6 )
flip_h = true
hframes = 20
vframes = 20
frame = 369

[node name="Walls" type="Node" parent="."]

[node name="GenericObject1" type="KinematicBody2D" parent="Walls"]
position = Vector2( 0, 48 )

[node name="Sprite" type="Sprite" parent="Walls/GenericObject1"]
scale = Vector2( 1.23077, 1.23077 )
texture = ExtResource( 6 )
centered = false
hframes = 20
vframes = 20
frame = 76

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/GenericObject1"]
position = Vector2( 8, 8 )
shape = SubResource( 2 )

[node name="GenericObject2" type="KinematicBody2D" parent="Walls"]
position = Vector2( 16, 48 )

[node name="Sprite" type="Sprite" parent="Walls/GenericObject2"]
scale = Vector2( 1.23077, 1.23077 )
texture = ExtResource( 6 )
centered = false
flip_h = true
hframes = 20
vframes = 20
frame = 76

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/GenericObject2"]
position = Vector2( 8, 8 )
shape = SubResource( 2 )

[node name="GenericObject3" type="KinematicBody2D" parent="Walls"]
position = Vector2( 32, 48 )

[node name="Sprite" type="Sprite" parent="Walls/GenericObject3"]
scale = Vector2( 1.23077, 1.23077 )
texture = ExtResource( 6 )
centered = false
hframes = 20
vframes = 20
frame = 76

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/GenericObject3"]
position = Vector2( 8, 8 )
shape = SubResource( 2 )

[node name="Blocks" type="Node" parent="."]

[node name="Ghostin = Vc" parent="Blocks" instance=ExtResource( 10 )]
position = Vector2( -22, 98 )
scale = Vector2( 0.7, 0.7 )

[node name="Haiiro = vc" parent="Blocks" instance=ExtResource( 11 )]
position = Vector2( -22, 60 )
scale = Vector2( 0.7, 0.7 )

[node name="Bandeira = Meta" type="Node2D" parent="Blocks"]
position = Vector2( 12, 64 )
scale = Vector2( 0.7, 0.7 )

[node name="StaticBody2D2" type="StaticBody2D" parent="Blocks/Bandeira = Meta"]
position = Vector2( -8, 24 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blocks/Bandeira = Meta/StaticBody2D2"]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="Blocks/Bandeira = Meta/StaticBody2D2"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 9 )

[node name="StaticBody2D3" type="StaticBody2D" parent="Blocks/Bandeira = Meta"]
position = Vector2( 8, 24 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blocks/Bandeira = Meta/StaticBody2D3"]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="Blocks/Bandeira = Meta/StaticBody2D3"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 8 )
hframes = 10
vframes = 6
frame = 30

[node name="StaticBody2D4" type="StaticBody2D" parent="Blocks/Bandeira = Meta"]
position = Vector2( 24, 24 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blocks/Bandeira = Meta/StaticBody2D4"]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="Blocks/Bandeira = Meta/StaticBody2D4"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 8 )
hframes = 10
vframes = 6
frame = 26

[node name="Caveira = Derrota" parent="Blocks" instance=ExtResource( 12 )]
position = Vector2( 12, 73 )
scale = Vector2( 0.7, 0.7 )

[node name="Cerca = Pare" parent="Blocks" instance=ExtResource( 13 )]
position = Vector2( -22, 77 )
scale = Vector2( 0.7, 0.7 )

[node name="IfLv10" type="Sprite" parent="Blocks"]
position = Vector2( 78, 157 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 14 )

[node name="StaticBody2D" type="StaticBody2D" parent="Blocks/IfLv10"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blocks/IfLv10/StaticBody2D"]
position = Vector2( -260.417, -180 )
shape = SubResource( 4 )

[node name="Help" type="CanvasLayer" parent="."]
pause_mode = 2
script = ExtResource( 15 )

[node name="Help" type="Control" parent="Help"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="ColorRect" parent="Help/Help"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.2, 0.207843, 0.211765, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Help/Help"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Var" type="VBoxContainer" parent="Help/Help/HBoxContainer"]
margin_right = 638.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( -592, -56 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="WhatVar" type="Label" parent="Help/Help/HBoxContainer/Var"]
margin_right = 638.0
margin_bottom = 93.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 20 )
text = "
Define qual Ã© o objeto
"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Help/Help/HBoxContainer/Var"]
margin_top = 97.0
margin_right = 638.0
margin_bottom = 382.0

[node name="Level Things" type="Label" parent="Help/Help/HBoxContainer/Var/HBoxContainer"]
margin_right = 638.0
margin_bottom = 285.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 20 )
text = "  - Haiiro 

  - Ghostin

  - Cerca

  - Caveira

  - Bandeira"

[node name="Haiiro" type="Sprite" parent="Help/Help/HBoxContainer/Var"]
position = Vector2( 218, 108 )
scale = Vector2( 4, 4 )
texture = ExtResource( 16 )
hframes = 17
vframes = 15
frame = 186

[node name="Ghostin" type="Sprite" parent="Help/Help/HBoxContainer/Var"]
modulate = Color( 0.541176, 0.541176, 0.921569, 1 )
position = Vector2( 218, 164 )
scale = Vector2( 4, 4 )
texture = ExtResource( 16 )
hframes = 17
vframes = 15
frame = 182

[node name="Bandeira" type="Sprite" parent="Help/Help/HBoxContainer/Var"]
position = Vector2( 218, 356 )
scale = Vector2( 4, 4 )
texture = ExtResource( 4 )
hframes = 20
vframes = 10
frame = 176

[node name="Caveira" type="Sprite" parent="Help/Help/HBoxContainer/Var"]
position = Vector2( 218, 292 )
scale = Vector2( 4, 4 )
texture = ExtResource( 4 )
hframes = 20
vframes = 10
frame = 197

[node name="Box" type="Sprite" parent="Help/Help/HBoxContainer/Var"]
visible = false
position = Vector2( 192, 256 )
scale = Vector2( 3, 3 )
texture = ExtResource( 19 )
centered = false

[node name="Porta" type="Sprite" parent="Help/Help/HBoxContainer/Var"]
visible = false
position = Vector2( 216, 344 )
scale = Vector2( 4, 4 )
texture = ExtResource( 6 )
hframes = 20
vframes = 20
frame = 24

[node name="Porta2" type="Sprite" parent="Help/Help/HBoxContainer/Var"]
visible = false
position = Vector2( 272, 344 )
scale = Vector2( 4, 4 )
texture = ExtResource( 6 )
hframes = 20
vframes = 20
frame = 20

[node name="BotÃ£o" type="Sprite" parent="Help/Help/HBoxContainer/Var"]
visible = false
position = Vector2( 192, 384 )
scale = Vector2( 4, 4 )
texture = ExtResource( 18 )
centered = false
hframes = 20
vframes = 21
frame = 152

[node name="Sprite" type="Sprite" parent="Help/Help/HBoxContainer/Var"]
position = Vector2( 194, 204 )
scale = Vector2( 4, 4 )
texture = ExtResource( 6 )
centered = false
hframes = 20
vframes = 20
frame = 76

[node name="Sprite2" type="Sprite" parent="Help/Help/HBoxContainer/Var"]
position = Vector2( 194, 204 )
scale = Vector2( 4, 4 )
texture = ExtResource( 6 )
centered = false
hframes = 20
vframes = 20
frame = 76

[node name="Value" type="VBoxContainer" parent="Help/Help/HBoxContainer"]
margin_left = 642.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="WhatVal" type="Label" parent="Help/Help/HBoxContainer/Value"]
margin_right = 638.0
margin_bottom = 93.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 20 )
text = "
Define o que vai acontecer com o objeto
"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Help/Help/HBoxContainer/Value"]
margin_top = 97.0
margin_right = 638.0
margin_bottom = 382.0

[node name="Level Things" type="Label" parent="Help/Help/HBoxContainer/Value/HBoxContainer"]
margin_right = 638.0
margin_bottom = 285.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 20 )
text = "  - Voce: O que vai ser controlado

  - Pare: Nao pode ser atravessado

  - Derrota: O objeto que entrar em
  contato vai ser apagado

  - Meta:Ao entrar em todas a fase sera
  concluida"

[node name="QtdHaiiro" type="Sprite" parent="."]
position = Vector2( 51, 28 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="."]
margin_left = 50.0
margin_right = 90.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 17 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="Node2D/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Node2D/Area2D" to="Node2D" method="_on_Area2D_body_entered"]
